Make rig showcase gifs pad correctly on mobile

--- a/static/styles/rigs.css
+++ b/static/styles/rigs.css
@@ -18,7 +18,7 @@
 
     .rig-showcase .gifs img,
     .rig-rotator {
-        margin: 0.5em;
+        margin: 0.5em 0 !important;
     }
 
     .rig-showcase .gifs img {
